2009-02-10 Richard Dale  <richard.j.dale@gmail.com>
* Add hash() and eql?() methods to the Wt::Base class. This is so that if the
same C++ instance is wrapped more than once in a Ruby instance, they are 
considered equal to each other from the point of view of keys to Hashes. This
fixes a bug in the Wt::WSignalMapper class, whether the data associated with
mapped signals kept in a Hash was not being found when the signal was emitted.

2009-02-04 Richard Dale  <richard.j.dale@gmail.com>
* In Ruby 1.9.1 the arity of a block with no arguments is 0, whereas in Ruby 
1.8.x it is -1. This meant that blocks passed to QtRuby constructors with no 
args weren't working with Ruby 1.9.1

2009-02-03 Richard Dale <richard.j.dale@gmail.com>
* Change the license of Wt::Ruby from GPL to LGPL 2 and update the license
headers in the source files. See the LICENSES and AUTHORS files for more
details.

2009-02-02 Richard Dale <richard.j.dale@gmail.com>
* Made Wt::Ruby build with Ruby 1.9.1 as well as 1.8.x
* Ported the examples to work with Ruby 1.9.1. Mostly 'when statements' ending
in colons needing fixing. Changed character literals like '?,' to '?,.ord'. 
Added '# encoding: utf-8' at the top of any sources with multi-byte characters
in them.

2009-02-01 Richard Dale <richard.j.dale@gmail.com>
* Wt::Internal#try_intialize now catches a symbol :wtnew, which should be 
compatible with Ruby 1.9.x

2009-01-31 Richard Dale <richard.j.dale@gmail.com>
* The gitmodel example now works

2009-01-29 Richard Dale <richard.j.dale@gmail.com>
* The construct_copy() function wasn't working with class names containing 
'::', which happens to be all of the classes in Wt::Ruby. Add some logging
when running in garbage collection debug mode to give a warning that a copy 
has failed. Also put the function in the Wt::Ruby namespace.
* Added a marshaller for Wt::Signal<> type as a synonym for Wt::Signal<void>
* Added uint64_t and int64_t marshallers